dataset1235/2025-2/1955397009/users/2372342006/executions/2304143742_254684124.log
== RUN (2025-09-02 12:40:38)
-- CODE: 
idade= int(input("Insira sua idade: "))
print (idade)

if: idade>= 18
print ("Maior_de_idade")
else:
print ("Menor_de_idade")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if: idade>= 18
      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    if: idade>= 18
      ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    if: idade>= 18
      ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if: idade>= 18
      ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if: idade>= 18
      ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if: idade>= 18
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 12:40:40)
-- CODE: 
idade= int(input("Insira sua idade: "))
print (idade)

if: idade>= 18
print ("Maior_de_idade")
else:
print ("Menor_de_idade")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if: idade>= 18
      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    if: idade>= 18
      ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    if: idade>= 18
      ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if: idade>= 18
      ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if: idade>= 18
      ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if: idade>= 18
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 12:42:37)
-- CODE: 
idade= int(input("Insira sua idade: "))
print (idade)

if idade>= 18:
 print ("Maior_de_idade")
else:
 print ("Menor_de_idade")

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 12:42:28)
-- CODE: 
idade= int(input("Insira sua idade: "))
print (idade)

if idade>= 18:
 print ("Maior_de_idade")
else:
 print ("Menor_de_idade")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 12:40:06)
-- CODE: 
idade= int(input("Insira sua idade: "))
print (idade)

if idade>= 18
print ("Maior_de_idade")
else
print ("Menor_de_idade")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 12:40:33)
-- CODE: 
idade= int(input("Insira sua idade: "))
print (idade)

if: idade>= 18:
print ("Maior_de_idade")
else:
print ("Menor_de_idade")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if: idade>= 18:
      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    if: idade>= 18:
      ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    if: idade>= 18:
      ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if: idade>= 18:
      ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if: idade>= 18:
      ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if: idade>= 18:
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 12:40:06)
-- CODE: 
idade= int(input("Insira sua idade: "))
print (idade)

if idade>= 18
print ("Maior_de_idade")
else
print ("Menor_de_idade")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 12:40:20)
-- CODE: 
idade= int(input("Insira sua idade: "))
print (idade)

if idade>= 18
print ("Maior_de_idade")
else:
print ("Menor_de_idade")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 12:39:59)
-- CODE: 
idade= int(input("Insira sua idade: "))
print (idade)

if idade>= 18
print ("Maior_de_idade")
else:
print ("Menor_de_idade")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 12:40:48)
-- CODE: 
idade= int(input("Insira sua idade: "))
print (idade)

if idade>= 18
print ("Maior_de_idade")
else:
print ("Menor_de_idade")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 12:40:25)
-- CODE: 
idade= int(input("Insira sua idade: "))
print (idade)

if idade>= 18:
print ("Maior_de_idade")
else:
print ("Menor_de_idade")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print ("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 5
    print ("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 5
    print ("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print ("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print ("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print ("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 12:40:04)
-- CODE: 
idade= int(input("Insira sua idade: "))
print (idade)

if idade>= 18
print ("Maior_de_idade")
else
print ("Menor_de_idade")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    if idade>= 18
                 ^
SyntaxError: expected ':'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 12:39:50)
-- CODE: 
idade= int(input("Insira sua idade: "))
print (idade)

if idade>= 18:
print ("Maior_de_idade")
else:
print ("Menor_de_idade")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print ("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 5
    print ("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 5
    print ("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print ("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print ("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 5
    print ("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 12:42:19)
-- CODE: 
idade= int(input("Insira sua idade: "))
print (idade)

if idade>= 18:
 print ("Maior_de_idade")
else:
 print ("Menor_de_idade")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
